--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 aiobotocore==2.7.0
-aiohttp==3.8.6
+aiohttp==3.9.5
 aioitertools==0.11.0
 aiosignal==1.3.1
 alembic==1.12.0
 annotated-types==0.6.0
+anthropic==0.25.7
 anyio==4.0.0
 apache-airflow==2.7.2
 apache-airflow-providers-common-sql==1.8.0
@@ -32,15 +33,18 @@ colorlog==4.8.0
 configparser==6.0.0
 ConfigUpdater==3.1.1
 connexion==2.14.2
-cron-descriptor==1.4.0
+cron_descriptor==1.4.0
 croniter==2.0.1
 cryptography==41.0.4
 Deprecated==1.2.14
 dill==0.3.7
+distro==1.9.0
 dnspython==2.4.2
+docstring_parser==0.16
 docutils==0.20.1
 email-validator==1.3.1
 exceptiongroup==1.1.3
+filelock==3.14.0
 Flask==2.2.5
 Flask-AppBuilder==4.3.6
 Flask-Babel==2.0.0
@@ -56,15 +60,18 @@ fsspec==2023.10.0
 google-re2==1.1
 googleapis-common-protos==1.61.0
 graphviz==0.20.1
+greenlet==3.0.3
 grpcio==1.59.0
 gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.18.0
 httpx==0.25.0
+huggingface-hub==0.23.0
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
 inflection==0.5.1
+instructor==1.2.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -85,6 +92,7 @@ mdit-py-plugins==0.4.0
 mdurl==0.1.2
 multidict==6.0.4
 numpy==1.26.1
+openai==1.25.2
 opentelemetry-api==1.20.0
 opentelemetry-exporter-otlp==1.20.0
 opentelemetry-exporter-otlp-proto-common==1.20.0
@@ -105,12 +113,13 @@ prison==0.2.1
 protobuf==4.24.4
 psutil==5.9.6
 pycparser==2.21
-pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic==2.7.1
+pydantic_core==2.18.2
 Pygments==2.16.1
 PyJWT==2.8.0
 python-daemon==3.0.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 python-nvd3==0.15.0
 python-slugify==8.0.1
 pytz==2023.3.post1
@@ -120,11 +129,12 @@ referencing==0.30.2
 requests==2.31.0
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
-rich==13.6.0
+rich==13.7.1
 rich-argparse==1.4.0
 rpds-py==0.10.6
 s3fs==2023.10.0
 setproctitle==1.3.3
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.49
@@ -135,6 +145,10 @@ tabulate==0.9.0
 tenacity==8.2.3
 termcolor==2.3.0
 text-unidecode==1.3
+tokenizers==0.19.1
+tqdm==4.66.4
+typer==0.12.3
+typing==3.7.4.3
 typing_extensions==4.8.0
 tzdata==2023.3
 uc-micro-py==1.0.2
